--- a/donate.html
+++ b/donate.html
@@ -2,165 +2,170 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/theme.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/Kropum/donate.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="assets/css/theme.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/Kropum/donate.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sevillana&display=swap"
-        rel="stylesheet">
-    <title>បរិច្ចាគ</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sevillana&display=swap"
+    rel="stylesheet">
+  <title>បរិច្ចាគ</title>
 </head>
 
 <body>
-<section class="mt-5">
-        <div class="container  rounded-3 gx-3 " >
-            <div class="row" >
-                <div class="col-md-12 col-lg-6 mt-15">
-                    <div class="card animate__animated animate__fadeInLeft border-0">
-                        <h1 class="text-center fw-bold ">កន្លែង<span class="text-success">បរិច្ចាគ</span></h1>
-                        <p class="text-center fw-bold">Drop-off points for plastic, clothes, and household goods <br>ចូលរួមជាមួយពួកយើង ដើម្បីការពារបរិស្ថាន</p>
-                        <p class="text-center fw-bold"></p>
+  <section class="mt-5">
+    <div class="container  rounded-3 gx-3 ">
+      <div class="row ">
+        <div class="col-md-12 col-lg-6 mt-15">
+          <div class="card animate__animated animate__fadeInLeft border-0">
+            <h1 class="text-center fw-bold ">កន្លែង<span class="text-success">បរិច្ចាគ</span></h1>
+            <p class="text-center fw-bold">Drop-off points for plastic, clothes, and household goods
+              <br>ចូលរួមជាមួយពួកយើង ដើម្បីការពារបរិស្ថាន</p>
+            <p class="text-center fw-bold"></p>
 
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <img src="https://i.pinimg.com/736x/6f/9b/64/6f9b64479df8be4e6f7eb523aeb9be99.jpg" alt="" class="animate__animated animate__fadeInRight img-fluid rounded-3" style="width: 80%;">
-                </div>
-                     </div>
-                </div>
-
-    </section>
-    <section>
-          <div class="hero-banner">
-    <div class="hero-content">
-      <h2>កន្លែងបរិច្ចាគ និងកន្លែងកែច្នៃនៅកម្ពុជា</h2>
-      <p>(Places to Donate & Recycle in Cambodia)</p>
+          </div>
+        </div>
+        <div class="col-md-12 col-lg-6">
+          <img src="https://i.pinimg.com/736x/6f/9b/64/6f9b64479df8be4e6f7eb523aeb9be99.jpg" alt=""
+            class="animate__animated animate__fadeInRight img-fluid rounded-3" style="width: 80%;">
+        </div>
+      </div>
     </div>
-  </div>
 
-    </section>
-    <section>
-          <div class="container">
-    <div class="row">
+  </section>
+  <section>
+    <div class="hero-banner">
+      <div class="hero-content">
+        <h2 class="stroke-text">ចូលរួមបរិច្ចាគ និងកែច្នៃផ្លាស្ទិកនៅកម្ពុជា</h2>
+        <p class="text-dark">( Donate & Recycle in Cambodia)</p>
+      </div>
+    </div>
 
-      <!-- Card 1 -->
-      <div class="col-4">
-        <div class="card">
-          <img src="assets/Kropum/img/10.jpg" alt="White Tiger" class="card-img">
-          <div class="card-overlay">
-            <span class="card-overlay-icon">&#128279;</span>
+  </section>
+  <section class="my-10">
+    <div class="container">
+      <h3 class="text-center fw-bold mb-5 ">ទីតាំងបរិច្ចាគ និងកែច្នៃនៅកម្ពុជា</h3>
+      <div class="row gy-4">
+
+        <!-- Card 1 -->
+        <div class="col-4">
+          <div class="card">
+            <img src="https://i.pinimg.com/736x/29/2a/f4/292af4d58e89e7ce1f3dc0f0b8368e4f.jpg" alt="White Tiger" class="card-img">
+            <div class="card-overlay">
+              <span class="card-overlay-icon">&#128279;</span>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Pizza 4P's</h3>
+              <p class="card-text">Animals, Home</p>
+            </div>
           </div>
-          <div class="card-body">
-            <h3 class="card-title">White Tiger</h3>
-            <p class="card-text">Animals, Home</p>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="col-4">
+          <div class="card">
+            <img src="https://scontent.fpnh5-3.fna.fbcdn.net/v/t39.30808-6/481465969_1207412938050782_3520185278417103767_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=86c6b0&_nc_eui2=AeGeqo3SUCQWHnlcopoKLcfYcsrl05AEtiRyyuXTkAS2JGukKw95m90D-H8wfANh7w2Nl45TphKxgcfWCWncW5zu&_nc_ohc=T69xYcWrMicQ7kNvwEJ2gNT&_nc_oc=AdlyDU5pWrsaGk8ab1WpkjYV_hIX9zps2adybvUoXSblOAncB9AFCelp150v-YWiLxI&_nc_zt=23&_nc_ht=scontent.fpnh5-3.fna&_nc_gid=-m_deSVkqejNTuedGiisgg&oh=00_AfUERKb8NcEbeQ12dyKnXqTr5B-Tu-M4trWTRCmOA4Rilw&oe=68BB3BEF" alt="Present for You" class="card-img">
+            <div class="card-overlay">
+              <span class="card-overlay-icon">&#128279;</span>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Be Eco</h3>
+              <p class="card-text">Ecology, Home</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
+            <div class="card-overlay">
+              <span class="card-overlay-icon">&#128279;</span>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Ocean Turtle</h3>
+              <p class="card-text">Animals</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
+            <div class="card-overlay">
+              <span class="card-overlay-icon">&#128279;</span>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Ocean Turtle</h3>
+              <p class="card-text">Animals</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
+            <div class="card-overlay">
+              <span class="card-overlay-icon">&#128279;</span>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Ocean Turtle</h3>
+              <p class="card-text">Animals</p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
+            <div class="card-overlay">
+              <span class="card-overlay-icon">&#128279;</span>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Ocean Turtle</h3>
+              <p class="card-text">Animals</p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
+            <div class="card-overlay">
+              <span class="card-overlay-icon">&#128279;</span>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Ocean Turtle</h3>
+              <p class="card-text">Animals</p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
+            <div class="card-overlay">
+              <span class="card-overlay-icon">&#128279;</span>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Ocean Turtle</h3>
+              <p class="card-text">Animals</p>
+            </div>
           </div>
         </div>
       </div>
+    </div>
+  </section>
 
-      <!-- Card 2 -->
-      <div class="col-4">
-        <div class="card">
-          <img src="assets/Kropum/img/12.jpg" alt="Present for You" class="card-img">
-          <div class="card-overlay">
-            <span class="card-overlay-icon">&#128279;</span>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Present for You</h3>
-            <p class="card-text">Ecology, Home</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Card 3 -->
-      <div class="col-4">
-        <div class="card">
-          <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
-          <div class="card-overlay">
-            <span class="card-overlay-icon">&#128279;</span>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Ocean Turtle</h3>
-            <p class="card-text">Animals</p>
-          </div>
-        </div>
-      </div>
-            <div class="col-4">
-        <div class="card">
-          <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
-          <div class="card-overlay">
-            <span class="card-overlay-icon">&#128279;</span>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Ocean Turtle</h3>
-            <p class="card-text">Animals</p>
-          </div>
-        </div>
-      </div>
-            <div class="col-4">
-        <div class="card">
-          <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
-          <div class="card-overlay">
-            <span class="card-overlay-icon">&#128279;</span>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Ocean Turtle</h3>
-            <p class="card-text">Animals</p>
-          </div>
-        </div>
-      </div>
-
-
-            <div class="col-4">
-        <div class="card">
-          <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
-          <div class="card-overlay">
-            <span class="card-overlay-icon">&#128279;</span>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Ocean Turtle</h3>
-            <p class="card-text">Animals</p>
-          </div>
-        </div>
-      </div>
-
-
-            <div class="col-4">
-        <div class="card">
-          <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
-          <div class="card-overlay">
-            <span class="card-overlay-icon">&#128279;</span>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Ocean Turtle</h3>
-            <p class="card-text">Animals</p>
-          </div>
-        </div>
-      </div>
-
-
-            <div class="col-4">
-        <div class="card">
-          <img src="assets/Kropum/img/11.jpg" alt="Ocean Turtle" class="card-img">
-          <div class="card-overlay">
-            <span class="card-overlay-icon">&#128279;</span>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Ocean Turtle</h3>
-            <p class="card-text">Animals</p>
-          </div>
-        </div>
-      </div>
-
-
-    </section>
-        
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
