--- a/event.html
+++ b/event.html
@@ -10,9 +10,7 @@
   <link rel="stylesheet" href="assets/Kropum/test.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sevillana&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sevillana&display=swap" rel="stylesheet">
   <title>ព្រឺត្តិការណ៍</title>
 </head>
 
@@ -56,7 +54,7 @@
           <img src="assets/Kropum/img/Event6.jpg"
             class="card-img-top" alt="event2">
           <div class="card-body">
-            <h5 class="card-title fw-bold"><a href="event2.html" class="text-decoration-none text-success">Workshop Art,Culture</a></h5>
+            <h5 class="card-title fw-bold"><a href="event2.html" class="text-decoration-none text-success text-color">Workshop Art,Culture</a></h5>
             <p class="card-text">សិក្ខាសាលានេះផ្តោតលើសិល្បៈ និងវប្បធម៌ ដើម្បីលើកកម្ពស់ការយល់ដឹងអំពីបរិស្ថាន....</p>
             <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
           </div>
@@ -67,7 +65,7 @@
           <img src="assets/Kropum/img/event7.jpg"
             class="card-img-top" alt="event3">
           <div class="card-body">
-            <h5 class="card-title fw-bold"><a href="event3.html" class="text-decoration-none text-success">Plastic Waste</a></h5>
+            <h5 class="card-title fw-bold"><a href="event3.html" class="text-decoration-none text-success text-color">Plastic Waste</a></h5>
             <p class="card-text">សកម្មភាពនេះផ្តោតលើការកាត់បន្ថយសំណល់ប្លាស្ទិក និងលើកកម្ពស់ការប្រើ...</p>
             <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
           </div>
@@ -78,7 +76,7 @@
           <img src="assets/Kropum/img/event1.jpg"
             class="card-img-top" alt="event3">
           <div class="card-body">
-            <h5 class="card-title fw-bold"><a href="event4.html" class="text-decoration-none text-success">ECO Leadership Discovery</a></h5>
+            <h5 class="card-title fw-bold"><a href="event4.html" class="text-decoration-none text-success text-color">ECO Leadership Discovery</a></h5>
             <p class="card-text">សកម្មភាពនេះផ្តោតលើការអភិវឌ្ឍជំនាញភាពជាអ្នកដឹកនាំបៃតង និងការបង្កើតឱកាស...</p>
             <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
           </div>
@@ -89,7 +87,7 @@
           <img src="assets/Kropum/img/Event8.jpg"
             class="card-img-top" alt="event3">
           <div class="card-body">
-            <h5 class="card-title fw-bold"><a href="event5.html" class="text-decoration-none text-success">យុទ្ធនាការ សម្អាតទីក្រុង</a></h5>
+            <h5 class="card-title fw-bold"><a href="event5.html" class="text-decoration-none text-success text-color">យុទ្ធនាការ សម្អាតទីក្រុង</a></h5>
             <p class="card-text">ចូលរួមសម្អាតទីក្រុង ដើម្បីបង្កើនភាពស្អាត និងបង្កើតបរិយាកាសរស់នៅល្អប្រសើរ...</p>
             <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
           </div>
@@ -100,7 +98,7 @@
           <img src="assets/Kropum/img/event9.jpg"
             class="card-img-top" alt="event3">
           <div class="card-body">
-            <h5 class="card-title fw-bold"><a href="event6.html" class="text-decoration-none text-success">LCOY</a></h5>
+            <h5 class="card-title fw-bold"><a href="event6.html" class="text-decoration-none text-success text-color">LCOY</a></h5>
             <p class="card-text">សកម្មភាព LCOY ផ្តោតលើការចូលរួមរបស់យុវជនក្នុងការពារបរិស្ថាន និង...</p>
             <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
           </div>
@@ -113,7 +111,7 @@
             class="card-img-top" alt="event3">
            
           <div class="card-body">
-            <h5 class="card-title fw-bold"><a href="event7.html" class="text-decoration-none text-success">យុវជនជជែកពិភាក្សា អំពីបរិស្ថាន</a></h5>
+            <h5 class="card-title fw-bold"><a href="event7.html" class="text-decoration-none text-success text-color">យុវជនជជែកពិភាក្សា អំពីបរិស្ថាន</a></h5>
             <p class="card-text">សកម្មភាពនេះផ្តោតលើការចូលរួមរបស់យុវជនក្នុងការពិភាក្សា និងបង្កើតដំណោះស្រា...</p>
             <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
           </div>
@@ -124,7 +122,7 @@
           <img src="assets/Kropum/img/EVENT3.jpg"
             class="card-img-top" alt="event3">
           <div class="card-body">
-            <h5 class="card-title fw-bold"><a href="event8.html" class="text-decoration-none text-success">ប្រកួតរូបភាពអំពី Waste of life</a></h5>
+            <h5 class="card-title fw-bold"><a href="event8.html" class="text-decoration-none text-success text-color">ប្រកួតរូបភាពអំពី Waste of life</a></h5>
             <p class="card-text">សកម្មភាពប្រកួតរូបភាពនេះផ្តោតលើការបង្ហាញបញ្ហាសំណល់...</p>
             <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
           </div>
