--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -18,7 +18,7 @@
 <body>
 
     <main>
-        <section>
+        <section class="forgetpwd-area">
             <div class="container">
                 <div class="row justify-content-center align-items-center" style="height: 100vh;">
                     <div class="col-lg-10">
