--- a/newpassword.html
+++ b/newpassword.html
@@ -18,7 +18,7 @@
 <body>
 
     <main>
-        <section>
+        <section class="newpassword-area">
             <div class="container">
                 <div class="row align-items-center justify-content-center" style="height: 100vh;">
                     <div class="col-lg-10">
