--- a/pin.html
+++ b/pin.html
@@ -30,7 +30,7 @@
 
 <body>
     <main>
-        <section>
+        <section class="pin-area">
             <div class="container">
                 <div class="row align-items-center justify-content-center" style="height: 100vh;">
                     <div class="col-lg-10">
