--- a/register.html
+++ b/register.html
@@ -16,66 +16,67 @@
 </head>
 
 <body>
-    <header></header>
-    <!-- <main>
-        <section class="container">
-            <div class="wave">
-                ddd
-            </div>
-        </section>
-    </main> -->
     <main>
-        <section class="login-area py-8">
+        <section class="login-area">
             <div class="container">
-                <div class="row justify-content-center align-middle align-items-center align-content-center">
+                <div class="row justify-content-center align-items-center" style="height: 100vh;">
                     <div class="col-lg-9">
-                        <div class="row ">
-                            <div class="col-lg-6 bg-dark align-content-center">
-                                <div class="card border-0 rounded-0 bg-transparent">
-                                    <div class="card-body text-center">
-                                        <h1 class="card-title text-light display-4">Lorem ipsum dolor sit amet.</h1>
-                                        <p class="card-text text-light">Lorem ipsum dolor sit amet.</p>
+                        <div class="row g-0">
+                            <!-- left side  -->
+                            <div class="col-lg-6">
+                                <div class="bg-dark align-content-center py-19 d-none d-md-block"
+                                    style="height: 500px;">
+                                    <div class="card border-0 rounded-0 bg-transparent">
+                                        <div class="card-body text-center">
+                                            <h1 class="text-light display-5 fw-bolder">Let's Get Started</h1>
+                                            <p class="text-light">Join us and unlock your potential.</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 bg-black">
-                                <h2 class="fw-bolder pb-4 pt-4 text-success ps-9">Register</h2>
-                                <form action="" class="row text-center" novalidate>
-                                    <div class="col-lg-8 m-auto">
-                                        <div class="mb-4">
-                                            <div class="form-floating">
-                                                <input type="text" id="" placeholder="Your Name" required
+                            <!-- right side  -->
+                            <div class="col-lg-6">
+                                <div class="bg-black " style="height: 500px;">
+                                    <h2 class="fw-bolder pb-4 pt-4 text-success ps-9">Register</h2>
+                                    <form action="" class="row text-center" novalidate>
+                                        <div class="col-lg-12">
+                                            <div class="mb-4" style="padding: 0 80px;">
+                                                <div class="form-floating">
+                                                    <input type="text" id="" placeholder="Your Name" required
+                                                        class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <div class="mb-4" style="padding: 0 80px;">
+                                                <input type="email" id="" placeholder="Your Email" required
                                                     class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col-lg-8 m-auto">
-                                        <div class="mb-4">
-                                            <input type="email" id="" placeholder="Your Email" required
-                                                class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
+                                        <div class="col-lg-12">
+                                            <div class="mb-4" style="padding: 0 80px;">
+                                                <input type="password" id="" placeholder="Create Password" required
+                                                    class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="col-lg-8 m-auto">
-                                        <div class="mb-4">
-                                            <input type="password" id="" placeholder="Create Password" required
-                                                class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
+                                        <div class="col-lg-12">
+                                            <div class="mb-5" style="padding: 0 80px;">
+                                                <input type="password" id="" placeholder="Repeat Password" required
+                                                    class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="col-lg-8 m-auto">
-                                        <div class="mb-5">
-                                            <input type="password" id="" placeholder="Repeat Password" required
-                                                class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
+                                        <div class="col-sm-2 col-md-7 col-lg-7  text-center m-auto mb-1">
+                                            <button class="btn btn-success w-lg-100 w-75 fw-bolder" type="submit">Sign
+                                                up</button>
                                         </div>
-                                    </div>
-                                    <div class="col-sm-2 col-md-7 col-lg-7  text-center m-auto mb-1">
-                                        <button class="btn btn-success w-100 fw-bolder" type="submit">Sign up</button>
-                                    </div>
-                                    <div class="col-lg-7 d-flex m-auto justify-content-between mt-3">
-                                        <p class="text-white-50 fs-6">Already a Member?</p>
-                                        <a class="text-success card-link" href="signin.html" target="_parent">Sign in
-                                            here</a>
-                                    </div>
-                                </form>
+                                        <div class="col-lg-12">
+                                            <div class="d-flex justify-content-end align-items-center mt-4 justify-content-md-center justify-content-center">
+                                                <p class="text-secondary fs-6 align-items-center p-0 m-0">Already a Member?</p>
+                                                <a class="text-success pe-lg-15 ps-2 pe-md-0" href="signin.html" target="_parent">Sign in here</a>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -83,7 +84,6 @@
             </div>
         </section>
     </main>
-    <footer></footer>
 </body>
 <!-- js  -->
 <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
