--- a/signin.html
+++ b/signin.html
@@ -21,27 +21,29 @@
     <main>
         <section class="signin-area">
             <div class="container">
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-lg-10 bg-light mt-5 rounded-4">
-                        <div class="row">
+                <div class="row justify-content-center align-items-center" style="height: 100vh;">
+                    <div class="col-lg-10 ">
+                        <div class="row bg-light rounded-4">
                             <div class="col-lg-5 py-4">
-                                <form action="" novalidate>
+                                <form action="" class="row justify-content-center" novalidate>
                                     <h1 class="display-5 fw-bolder mb-5 text-center">Welcome back</h1>
-                                    <div class="col-lg-8 m-auto">
-                                        <div class="mb-2">
+                                    <!-- email  -->
+                                    <div class="col-lg-10">
+                                        <div class="row justify-content-center mb-4">
                                             <input type="text" id="" placeholder="Email" required
-                                                class="form-control border-0 rounded-pill bg-primary-subtle pb-2 text-success">
+                                                class="form-control border-0 rounded-pill bg-success-subtle pb-2 text-success">
                                         </div>
                                     </div>
-                                    <div class="col-lg-8 m-auto">
-                                        <div class="mb-4">
+                                    <!-- pwd  -->
+                                    <div class="col-lg-10">
+                                        <div class="row justify-content-center mb-5">
                                             <input type="password" id="" placeholder="Password" required
-                                                class="form-control border-0 rounded-pill bg-primary-subtle pb-2 text-success">
+                                                class="form-control border-0 rounded-pill bg-success-subtle pb-2 text-success">
                                         </div>
                                     </div>
-                                    <div class="col-lg-8 m-auto">
-                                        <div class="mb-3">
-                                            <button class="btn btn-success w-100 rounded-pill">Let's Go</button>
+                                    <div class="col-lg-7 m-auto">
+                                        <div class="row justify-content-center mb-3 ">
+                                            <button class="btn btn-success w-75 rounded-pill">Let's Go</button>
                                         </div>
                                     </div>
                                     <div class="col-lg-8 m-auto">
@@ -54,24 +56,23 @@
                                                         Remember me
                                                     </label>
                                                 </div>
-                                                <a class="card-link" href="forgetpassword.html" style="font-size: 14px;">Forget
-                                                    Password</a>
+                                                <a class="card-link text-success" href="forgetpassword.html" style="font-size: 14px;">Forget Password</a>
                                             </div>
                                         </div>
                                     </div>
                                     <div
-                                        class="col-lg-8 m-auto text-center mb-4 d-flex text-center align-items-center justify-content-between">
+                                        class="col-lg-8 m-auto text-center mb-1 d-flex text-center align-items-center justify-content-between">
                                         <div class="leftborder border-bottom " style="width: 40%;"></div>
                                         <p class="text-secondary mt-2">Or</p>
                                         <div class="rightborder border-bottom " style="width: 40%;"></div>
                                     </div>
                                     <div class="col-lg-8 m-auto text-center">
                                         <a href=""><img src="assets/chhorng/img/apple.png" alt=""
-                                                class="icon bg-primary-subtle rounded-circle"></a>
+                                                class="icon bg-success-subtle rounded-circle"></a>
                                         <a href=""><img src="assets/chhorng/img/fb.png" alt=""
-                                                class="icon bg-primary-subtle rounded-circle"></a>
+                                                class="icon bg-success-subtle rounded-circle"></a>
                                         <a href=""><img src="assets/chhorng/img/Google.webp" alt=""
-                                                class="icon bg-primary-subtle rounded-circle"></a>
+                                                class="icon bg-success-subtle rounded-circle"></a>
                                     </div>
                                 </form>
                             </div>
